--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "nse-proxy",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
+  "engines": { "node": "18.x" },
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.1",
+    "cors": "^2.8.5"
   }
 }
