--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
-    "cron": "^3.1.6"
+    "node-cron": "^3.0.3"
   }
 }
