--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
+    "express": "^4.19.2",
     "cheerio": "^1.0.0-rc.12",
-    "express": "^4.18.2"
+    "node-fetch": "^3.3.2"
   }
 }
